--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@react-native-vector-icons/fontawesome6": "^12.2.0",
     "@react-native-vector-icons/material-icons": "^12.3.0",
     "@react-native/new-app-screen": "0.82.0",
+    "@react-navigation/bottom-tabs": "^7.4.8",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.27",
     "react": "19.1.1",
     "react-native": "0.82.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
     "react-native-toast-message": "^2.3.3",
