--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-vector-icons/evil-icons": "^12.3.0",
+    "@react-native-vector-icons/fontawesome": "^12.3.0",
     "@react-native-vector-icons/fontawesome6": "^12.2.0",
+    "@react-native-vector-icons/fontisto": "^12.3.0",
     "@react-native-vector-icons/material-icons": "^12.3.0",
     "@react-native/new-app-screen": "0.82.0",
     "@react-navigation/bottom-tabs": "^7.4.8",
@@ -23,6 +25,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
+    "react-native-stars": "^1.2.2",
     "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.3.0"
   },
