--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "react": "19.1.1",
     "react-native": "0.82.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
-    "react-native-stars": "^1.2.2",
     "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.3.0"
   },
